--- a/projects/angular/src/utils/_mixins.scss
+++ b/projects/angular/src/utils/_mixins.scss
@@ -214,30 +214,30 @@ $opp-directions: (
 $typography-tokens: (
   'DISPLAY-40': (
     // H1, Login Header
-    font-size: #{tokens.$cds-alias-typography-display-font-size},
+    font-size: #{density.$clr-base-typography-font-size-display},
     font-weight: #{tokens.$cds-alias-typography-display-font-weight},
-    line-height: #{tokens.$cds-alias-typography-display-line-height},
+    line-height: #{density.$clr-base-typography-line-height-44},
     letter-spacing: #{baselinePx(-0.5)},
   ),
   'HEADLINE-32': (
     // H2, Page Header
-    font-size: #{tokens.$cds-alias-typography-headline-font-size},
+    font-size: #{density.$clr-base-typography-font-size-headline},
     font-weight: #{tokens.$cds-alias-typography-headline-font-weight},
-    line-height: #{tokens.$cds-alias-typography-headline-line-height},
+    line-height: #{density.$clr-base-typography-line-height-36},
     letter-spacing: #{baselinePx(-0.4)},
   ),
   'TITLE-24-EXP': (
     // H3, Modal, Wizard Heading
-    font-size: #{tokens.$cds-alias-typography-title-font-size},
+    font-size: #{density.$clr-base-typography-font-size-heading},
     font-weight: #{tokens.$cds-alias-typography-title-font-weight},
-    line-height: #{tokens.$cds-alias-typography-title-line-height},
+    line-height: #{density.$clr-base-typography-line-height-32},
     letter-spacing: #{baselinePx(-0.2)},
   ),
   'SECTION-20-STD': (
     // H4, Card, Signpost Heading, Wizard Sidenav Title
-    font-size: #{tokens.$cds-alias-typography-section-font-size},
+    font-size: #{density.$clr-base-typography-font-size-section},
     font-weight: #{tokens.$cds-alias-typography-section-font-weight},
-    line-height: #{tokens.$cds-alias-typography-section-line-height},
+    line-height: #{density.$clr-base-typography-line-height-24},
     letter-spacing: #{baselinePx(-0.2)},
   ),
   'SECTION-12-SB-CPT': (
@@ -248,148 +248,148 @@ $typography-tokens: (
   ),
   'SUBSECTION-16-EXP': (
     // H5, Stack View Heading
-    font-size: #{tokens.$cds-alias-typography-subsection-font-size},
+    font-size: #{density.$clr-base-typography-font-size-sub-section},
     font-weight: #{tokens.$cds-alias-typography-subsection-font-weight},
-    line-height: #{tokens.$cds-alias-typography-subsection-line-height},
+    line-height: #{density.$clr-base-typography-line-height-24},
     letter-spacing: #{baselinePx(-0.2)},
   ),
   'SUBSECTION-16-SB': (
-    font-size: #{tokens.$cds-alias-typography-subsection-font-size},
+    font-size: #{density.$clr-base-typography-font-size-sub-section},
     font-weight: #{tokens.$cds-global-typography-font-weight-semibold},
-    line-height: #{tokens.$cds-alias-typography-subsection-line-height},
+    line-height: #{density.$clr-base-typography-line-height-24},
     letter-spacing: #{baselinePx(-0.2)},
   ),
   'MESSAGE-16-EXP': (
     // H6, Heading
-    font-size: #{tokens.$cds-alias-typography-message-font-size},
+    font-size: #{density.$clr-base-typography-font-size-sub-section},
     font-weight: #{tokens.$cds-alias-typography-message-font-weight},
-    line-height: #{tokens.$cds-alias-typography-message-line-height},
+    line-height: #{density.$clr-base-typography-line-height-24},
     letter-spacing: #{baselinePx(-0.2)},
   ),
   'BODY-14-SB-STD': (
     // Not used yet
-    font-size: #{tokens.$cds-alias-typography-body-font-size},
+    font-size: #{density.$clr-base-typography-font-size-default},
     font-weight: #{tokens.$cds-alias-typography-font-weight-semibold},
-    line-height: #{tokens.$cds-alias-typography-body-line-height},
+    line-height: #{density.$clr-base-typography-line-height-20},
     letter-spacing: #{baselinePx(-0.1)},
   ),
   'BODY-14-MD-STD': (
     // Wizard sidenav link
-    font-size: #{tokens.$cds-alias-typography-body-font-size},
+    font-size: #{density.$clr-base-typography-font-size-default},
     font-weight: #{tokens.$cds-alias-typography-font-weight-medium},
-    line-height: #{tokens.$cds-alias-typography-body-line-height},
+    line-height: #{density.$clr-base-typography-line-height-20},
     letter-spacing: #{baselinePx(-0.1)},
   ),
   'BODY-14-RG-STD': (
     // P0, P1, Body text
-    font-size: #{tokens.$cds-alias-typography-body-font-size},
+    font-size: #{density.$clr-base-typography-font-size-default},
     font-weight: #{tokens.$cds-alias-typography-body-font-weight},
-    line-height: #{tokens.$cds-alias-typography-body-line-height},
+    line-height: #{density.$clr-base-typography-line-height-20},
     letter-spacing: #{baselinePx(-0.1)},
   ),
   'BODY-14-RG-CPT': (
-    font-size: #{tokens.$cds-alias-typography-body-font-size},
+    font-size: #{density.$clr-base-typography-font-size-default},
     font-weight: #{tokens.$cds-alias-typography-body-font-weight},
     line-height: #{density.$clr-base-typography-line-height-16},
     letter-spacing: #{baselinePx(-0.1)},
   ),
   'BODY-14-RG-EXP': (
-    font-size: #{tokens.$cds-alias-typography-body-font-size},
+    font-size: #{density.$clr-base-typography-font-size-default},
     font-weight: #{tokens.$cds-alias-typography-body-font-weight},
     line-height: #{density.$clr-base-typography-line-height-24},
     letter-spacing: #{baselinePx(-0.1)},
   ),
   'BODY-14-SB-EXP': (
-    font-size: #{tokens.$cds-alias-typography-body-font-size},
+    font-size: #{density.$clr-base-typography-font-size-default},
     font-weight: #{tokens.$cds-alias-typography-font-weight-semibold},
     line-height: #{density.$clr-base-typography-line-height-24},
     letter-spacing: #{baselinePx(-0.1)},
   ),
   'SECONDARY-14-RG-CPT': (
-    font-size: #{tokens.$cds-alias-typography-body-font-size},
+    font-size: #{density.$clr-base-typography-font-size-default},
     font-weight: #{tokens.$cds-global-typography-secondary-font-weight},
     line-height: #{density.$clr-base-typography-line-height-16},
     letter-spacing: #{baselinePx(-0.1)},
   ),
   'SECONDARY-13-MD-EXP': (
     // P2, Section Header
-    font-size: #{tokens.$cds-alias-typography-secondary-font-size},
+    font-size: #{density.$clr-base-typography-font-size-inline},
     font-weight: #{tokens.$cds-alias-typography-font-weight-medium},
     line-height: #{density.$clr-base-typography-line-height-24},
     letter-spacing: #{baselinePx(-0.1)},
   ),
   'SECONDARY-13-RG-CPT': (
     // Checkbox and radio labels, Spinner
-    font-size: #{tokens.$cds-alias-typography-secondary-font-size},
+    font-size: #{density.$clr-base-typography-font-size-inline},
     font-weight: #{tokens.$cds-alias-typography-secondary-font-weight},
-    line-height: #{tokens.$cds-alias-typography-secondary-line-height},
+    line-height: #{density.$clr-base-typography-line-height-16},
     letter-spacing: #{baselinePx(-0.1)},
   ),
   'SECONDARY-13-RG-EXP': (
     // P3, Form Labels and Column Headers
     // P5, Table footer and chart data
-    font-size: #{tokens.$cds-alias-typography-secondary-font-size},
+    font-size: #{density.$clr-base-typography-font-size-inline},
     font-weight: #{tokens.$cds-alias-typography-secondary-font-weight},
     line-height: #{density.$clr-base-typography-line-height-24},
     letter-spacing: #{baselinePx(-0.1)},
   ),
   'SECONDARY-13-RG-STD': (
-    font-size: #{tokens.$cds-alias-typography-secondary-font-size},
+    font-size: #{density.$clr-base-typography-font-size-inline},
     font-weight: #{tokens.$cds-alias-typography-secondary-font-weight},
     line-height: #{density.$clr-base-typography-line-height-20},
     letter-spacing: #{baselinePx(-0.1)},
   ),
   'SECONDARY-13-SB-STD': (
     // P4, Form Labels and Column Headers
-    font-size: #{tokens.$cds-alias-typography-secondary-font-size},
+    font-size: #{density.$clr-base-typography-font-size-inline},
     font-weight: #{tokens.$cds-alias-typography-font-weight-semibold},
     line-height: #{density.$clr-base-typography-line-height-20},
     letter-spacing: #{baselinePx(-0.1)},
   ),
   'SECONDARY-13-MD-CPT': (
-    font-size: #{tokens.$cds-alias-typography-secondary-font-size},
+    font-size: #{density.$clr-base-typography-font-size-inline},
     font-weight: #{tokens.$cds-alias-typography-font-weight-medium},
-    line-height: #{tokens.$cds-alias-typography-secondary-line-height},
+    line-height: #{density.$clr-base-typography-line-height-16},
     letter-spacing: #{baselinePx(-0.1)},
   ),
   'SECONDARY-13-SB-CPT': (
-    font-size: #{tokens.$cds-alias-typography-secondary-font-size},
+    font-size: #{density.$clr-base-typography-font-size-inline},
     font-weight: #{tokens.$cds-alias-typography-font-weight-semibold},
-    line-height: #{tokens.$cds-alias-typography-secondary-line-height},
+    line-height: #{density.$clr-base-typography-line-height-16},
     letter-spacing: #{baselinePx(-0.1)},
   ),
   'CAPTION-LG-11': (
     // P6, Small Headers
-    font-size: #{tokens.$cds-alias-typography-caption-font-size},
+    font-size: #{density.$clr-base-typography-font-size-caption},
     font-weight: #{tokens.$cds-alias-typography-caption-font-weight},
-    line-height: #{tokens.$cds-alias-typography-caption-line-height},
+    line-height: #{density.$clr-base-typography-line-height-16},
     letter-spacing: #{baselinePx(0.2)},
   ),
   'ColumnHeader-11-SB-CPT': (
-    font-size: #{tokens.$cds-alias-typography-caption-font-size},
+    font-size: #{density.$clr-base-typography-font-size-caption},
     font-weight: #{tokens.$cds-alias-typography-font-weight-semibold},
-    line-height: #{tokens.$cds-alias-typography-caption-line-height},
+    line-height: #{density.$clr-base-typography-line-height-16},
     letter-spacing: #{baselinePx(0.2)},
   ),
   'CAPTION-SM-10': (
     // P7, P8, Badges, Tag and Labels
-    font-size: #{tokens.$cds-alias-typography-smallcaption-font-size},
+    font-size: #{density.$clr-base-typography-font-size-caption-small},
     font-weight: #{tokens.$cds-alias-typography-smallcaption-font-weight},
-    line-height: #{tokens.$cds-alias-typography-smallcaption-line-height},
+    line-height: #{density.$clr-base-typography-line-height-12},
     letter-spacing: #{baselinePx(0.5)},
   ),
   'LINK-13': (
     // Link Text, Link Text Inverse
-    font-size: #{tokens.$cds-alias-typography-secondary-font-size},
+    font-size: #{density.$clr-base-typography-font-size-inline},
     font-weight: #{tokens.$cds-alias-typography-font-weight-regular},
-    line-height: #{tokens.$cds-alias-typography-secondary-line-height},
+    line-height: #{density.$clr-base-typography-line-height-16},
     letter-spacing: #{baselinePx(-0.1)},
   ),
   'LINK-14': (
     // Link Text, Link Text Inverse
-    font-size: #{tokens.$cds-alias-typography-body-font-size},
+    font-size: #{density.$clr-base-typography-font-size-default},
     font-weight: #{tokens.$cds-alias-typography-body-font-weight},
-    line-height: #{tokens.$cds-alias-typography-body-font-size},
+    line-height: #{density.$clr-base-typography-line-height-20},
     letter-spacing: #{baselinePx(-0.1)},
   ),
   'BUTTON-12': (
@@ -402,9 +402,9 @@ $typography-tokens: (
   ),
   'BUTTON-11-SMALL': (
     // Small Buttons
-    font-size: #{tokens.$cds-alias-typography-caption-font-size},
+    font-size: #{density.$clr-base-typography-font-size-caption},
     font-weight: #{tokens.$cds-alias-typography-font-weight-semibold},
-    line-height: #{tokens.$cds-alias-typography-caption-line-height},
+    line-height: #{density.$clr-base-typography-line-height-16},
     letter-spacing: #{baselinePx(0.2)},
     text-transform: uppercase,
   ),
