fix(dropdown): revert strict height and content wrapping

--- a/projects/angular/src/popover/dropdown/_dropdown.clarity.scss
+++ b/projects/angular/src/popover/dropdown/_dropdown.clarity.scss
@@ -141,7 +141,7 @@
           background-color: dropdown-variables.$clr-dropdown-item-color;
           @include mixins.equilateral(density.$clr-base-icon-size-xs);
           transform: rotate(-90deg);
-          flex: 0 0 auto;
+          margin-left: auto;
         }
 
         &.active:after {
@@ -165,10 +165,6 @@
       }
       &:focus {
         outline-offset: calc(-1 * tokens.$cds-global-space-2);
-      }
-      &-content {
-        @include mixins.overflow-ellipsis(true);
-        flex: 1 1 auto;
       }
     }
 
