--- a/projects/angular/src/popover/dropdown/_menu-mixins.clarity.scss
+++ b/projects/angular/src/popover/dropdown/_menu-mixins.clarity.scss
@@ -50,7 +50,8 @@
   display: flex;
   gap: density.$clr-base-gap-xs;
   align-items: center;
-  height: density.$clr-base-row-height-s;
+  height: auto;
+  min-height: density.$clr-base-row-height-s;
   margin: 0;
   width: 100%;
   text-transform: none;
