fix(badge): clr color naming

--- a/projects/demo/src/app/badges/badge-colors.demo.html
+++ b/projects/demo/src/app/badges/badge-colors.demo.html
@@ -9,16 +9,16 @@
 <div class="clr-example">
   <div>
     <clr-badge>11</clr-badge>
-    <clr-badge [clrBadgeColor]="ClrBadgeColors.Purple">15</clr-badge>
-    <clr-badge [clrBadgeColor]="ClrBadgeColors.Blue">2</clr-badge>
-    <clr-badge [clrBadgeColor]="ClrBadgeColors.Orange">3</clr-badge>
-    <clr-badge [clrBadgeColor]="ClrBadgeColors.LightBlue">12</clr-badge>
-    <clr-badge [clrBadgeColor]="'1'">90</clr-badge>
-    <clr-badge [clrBadgeColor]="'2'">51</clr-badge>
-    <clr-badge [clrBadgeColor]="'3'">25</clr-badge>
-    <clr-badge [clrBadgeColor]="'4'">32</clr-badge>
-    <clr-badge [clrBadgeColor]="'5'">57</clr-badge>
-    <clr-badge [clrBadgeColor]="'gray'">12</clr-badge>
+    <clr-badge [clrColor]="ClrBadgeColors.Purple">15</clr-badge>
+    <clr-badge [clrColor]="ClrBadgeColors.Blue">2</clr-badge>
+    <clr-badge [clrColor]="ClrBadgeColors.Orange">3</clr-badge>
+    <clr-badge [clrColor]="ClrBadgeColors.LightBlue">12</clr-badge>
+    <clr-badge [clrColor]="'1'">90</clr-badge>
+    <clr-badge [clrColor]="'2'">51</clr-badge>
+    <clr-badge [clrColor]="'3'">25</clr-badge>
+    <clr-badge [clrColor]="'4'">32</clr-badge>
+    <clr-badge [clrColor]="'5'">57</clr-badge>
+    <clr-badge [clrColor]="'gray'">12</clr-badge>
   </div>
 </div>
 
