--- a/projects/demo/src/app/badges/badge-statuses.demo.html
+++ b/projects/demo/src/app/badges/badge-statuses.demo.html
@@ -7,10 +7,10 @@
 
 <h2>Angular Badges</h2>
 <div class="clr-example">
-  <clr-badge [clrBadgeColor]="ClrBadgeColors.Info">2</clr-badge>
-  <clr-badge [clrBadgeColor]="ClrBadgeColors.Success">3</clr-badge>
-  <clr-badge [clrBadgeColor]="ClrBadgeColors.Warning">12</clr-badge>
-  <clr-badge [clrBadgeColor]="ClrBadgeColors.Danger">15</clr-badge>
+  <clr-badge [clrColor]="ClrBadgeColors.Info">2</clr-badge>
+  <clr-badge [clrColor]="ClrBadgeColors.Success">3</clr-badge>
+  <clr-badge [clrColor]="ClrBadgeColors.Warning">12</clr-badge>
+  <clr-badge [clrColor]="ClrBadgeColors.Danger">15</clr-badge>
 </div>
 
 <h2>CSS Badges</h2>
